# linux_system_programming_companion

./: README.md  build
.github/workflows/: ci.yml
slides/examples/: CMakeLists.txt
slides/examples/args/: CMakeLists.txt  args.cpp
slides/examples/basics/: CMakeLists.txt  demo  get_user_group_ids.cpp  sysconf_1.cpp
slides/examples/capabilities/: CMakeLists.txt  demo  getfcap_1.cpp  getpcap_1.cpp  unique_cap.hpp  unique_handle.hpp
slides/examples/cmake/: FindFmt.cmake
slides/examples/files/: CMakeLists.txt  copy_file_1.cpp  demo  file_1.cpp  file_2.cpp  file_3.cpp  io_redirection_1.cpp  pipe_1.cpp  unique_fd.hpp  unique_fd_1.cpp  unique_handle.hpp  vectored_io_1_a.cpp  vectored_io_1_b.cpp
slides/examples/futexes/: CMakeLists.txt  atomic_cas.cpp  atomic_tas.cpp  barrier.cpp  barrier.hpp  barrier_app.cpp  futex.hpp  mutex1.cpp  mutex1.hpp  mutex1_test.cpp  mutex2.cpp  mutex2.hpp  mutex2_test.cpp  mutex_demo  mutex_test.hpp  spinlock1.hpp  spinlock1_app.cpp  spinlock1_test.cpp  spinlock2.hpp  spinlock2_test.cpp  ticketlock1.hpp  ticketlock1_test.cpp  util.hpp
slides/examples/hello/: CMakeLists.txt  demo  hello_1.c  hello_2.cpp
slides/examples/loaders/aslr/: CMakeLists.txt  aslr.cpp  demo
slides/examples/loaders/libgreet/: CMakeLists.txt  app.cpp  app_dl.cpp  greet.cpp  greet.hpp  run_app_dl
slides/examples/processes/: CMakeLists.txt  clone_1.cpp  demo  exec_1.cpp  fork_1.cpp  fork_exec_1.cpp  fork_wait_1.cpp  fork_wait_2.cpp  get_process_ids.cpp
slides/examples/ptrace/: CMakeLists.txt  demo  make_syscall_names  ptrace_1.cpp  ptrace_2.cpp  ptrace_3.cpp
slides/examples/signals/: CMakeLists.txt  breakpoint_lib.hpp  breakpoint_main.cpp  breakpoint_x86.s  demo  kill_1.cpp  sigill_lib.hpp  sigill_main.cpp  sigill_x86.s  signal_1.cpp  sigsegv_lib.hpp  sigsegv_main.cpp  sigsegv_x86.s
slides/examples/unix_domain_sockets/: CMakeLists.txt  dgram_client.cpp  dgram_server.cpp  passing_descriptors_1.cpp  stream_client.cpp  stream_client_2.cpp  stream_server.cpp  stream_server_2.cpp
slides/examples/virtual_memory/: CMakeLists.txt  checksum_1.cpp  crash_1.cpp  demo  mmap_1.cpp  mmap_2.cpp  mmap_allocator.hpp  mmap_allocator_main.cpp  mprotect_1.cpp
slides/examples/x86_64/general/: CMakeLists.txt  addints_0_a.cpp  addints_0_b.cpp  addints_1.s  addints_2.s  addints_test.cpp  breakpoint_single_byte_opcode_1.s  example1_0.cpp  example1_1.s  factorial_0.cpp  factorial_1.s  factorial_test.cpp  frame_pointer_0.s  frame_pointer_1.s  hamming_weight_0.cpp  hamming_weight_1.s  hamming_weight_test.cpp  hello_1.s  hello_2.s  hello_world_0.cpp  max_0.cpp  max_1.s  max_test.cpp  true_0.cpp  true_1.s
slides/examples/x86_64/pic/: CMakeLists.txt  demo  main.cpp  no_pie.s  pie.s
